Refactor: Add BaseController, UserSession, Quiz/Question DAOs, global CSS, unit tests
- Added BaseController for standardized navigation
- Added UserSession singleton for authentication state
- Created QuizDAO and QuestionDAO for database operations
- Added global.css design system
- Created unit tests for QuizDAO, QuestionDAO, UserSession
- Fixed compilation errors in NavigationService and controllers
- Refactored AdminController, LoginController, UtilisateurController